--- a/src/components/Hero/AlternateHorizontal/hero.css
+++ b/src/components/Hero/AlternateHorizontal/hero.css
@@ -1,15 +1,53 @@
-.horizontal_hero {
-  --bg: var(--clr-primary-darker);
-  --text: oklch(from(var(--bg)), calc(l + 0.92) c h);
-  color: var(--text);
-  background-color: var(--bg);
+.alternate_horizontal_hero__wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 500px;
+  align-items: center;
+  gap: var(--size-4);
+}
+.alternate_horizontal_hero__content {
+  padding-block: var(--size-4);
+}
+.alternate_horizontal_hero__content h1 {
+  font-size: var(--heading-4xl);
+  color: var(--clr-primary);
+  max-width: 30ch;
+}
+
+.alternate_horizontal_hero__image_wrapper {
+  position: relative;
+  isolation: isolate;
+
+  width: 100%;
+  height: 100%;
+}
+
+.alternate_horizontal_hero__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.alternate_horizontal_hero__image_wrapper::before {
+  content: '';
+  position: absolute;
+  inset: 0 0 auto;
+  width: 100%;
+  height: 100%;
+  background-image: url('/src/assets/boxy-grid-small-screen-overlay.svg');
 }
 @media (min-width: 768px) {
-  .horizontal_hero__wrapper {
+  .alternate_horizontal_hero__wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
-    grid-template-rows: min(100vh, 400px);
-    gap: var(--size-4);
+    grid-template-columns: 40% 1fr;
+    grid-template-rows: 600px;
     align-items: center;
+  }
+
+  .alternate_horizontal_hero__image_wrapper::before {
+    background-image: url('/src/assets/boxy-grid-overlay.svg');
+    background-size: contain;
+    /* background-repeat: no-repeat; */
+    background-position: center;
   }
 }
