--- a/src/components/Hero/PageHero.astro
+++ b/src/components/Hero/PageHero.astro
@@ -6,6 +6,7 @@ import StylisedHorizontal from "./StylisedHorizontal/StylisedHorizontal.astro";
 import Overflow from "./Overflow/Overflow.astro";
 import VerticalWithImage from "./VerticalWithImage/VerticalWithImage.astro";
 import AlternateVertical from "./AlternateVertical/AlternateVertical.astro";
+import AlternateHorizontal from "./AlternateHorizontal/AlternateHorizontal.astro";
 
 const props = Astro.props
 ---
@@ -13,6 +14,7 @@ const props = Astro.props
 {props.type === "default" && <Overflow {...props} />}
 {props.type === "vertical" && <VerticalWithImage {...props} />}
 {props.type === "alternate vertical" && <AlternateVertical {...props} />}
+{props.type === "horizontal" && <AlternateHorizontal {...props} />}
 
 <!-- ---
 import type { HeroProps } from "@utils/types";
