style: Adjust layout and overflow properties in AlternateHorizontal hero; update SimpleNav accessibility attributes

--- a/src/components/Hero/AlternateHorizontal/hero.css
+++ b/src/components/Hero/AlternateHorizontal/hero.css
@@ -20,6 +20,8 @@
 
   width: 100%;
   height: 100%;
+
+  overflow: hidden;
 }
 
 .alternate_horizontal_hero__image {
@@ -39,7 +41,7 @@
 @media (min-width: 768px) {
   .alternate_horizontal_hero__wrapper {
     display: grid;
-    grid-template-columns: 40% 1fr;
+    grid-template-columns: 480px 1fr;
     grid-template-rows: 600px;
     align-items: center;
   }
