--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1385,3 +1385,15 @@ Text colors that contrast well with background colors.
 ::view-transition-old(pageHeading):only-child {
     animation: var(--transition-exit-elastic-fast) both slide-out;
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
