--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -11,5 +11,5 @@ const footerProps = {
     country
 }
 ---
-{style === 'floating' && <FloatingFooter {...footerProps} />}
-{style === 'default' && <TinyFooter {...footerProps} />}
+{style === 'default' && <FloatingFooter {...footerProps} />}
+{style === 'tiny' && <TinyFooter {...footerProps} />}
