--- a/src/components/IconLink.astro
+++ b/src/components/IconLink.astro
@@ -10,14 +10,14 @@ const props = Astro.props;
 
 const url: Record<string, string> = {
     mobile: "tel:",
-    landline: "tel:",
+    telephone: "tel:",
     whatsapp: "https://wa.me/",
     email: "mailto:",
 };
 
 const icons: Record<string, `mdi:${string}` | `ri:${string}`> = {
     mobile: "mdi:cellphone",
-    landline: "mdi:phone",
+    telephone: "mdi:phone",
     whatsapp: "ri:whatsapp-fill",
     email: "mdi:email",
 };
