--- a/src/components/PageNavigation/SimpleNav/SimpleNav.astro
+++ b/src/components/PageNavigation/SimpleNav/SimpleNav.astro
@@ -49,7 +49,7 @@ const pageLinks = menuItems.map((link: Link) =>
                     classlist="simple-nav__logo-image"
                     size="logo"
                 />
-                <span class="simple-nav__logo-text">{title}</span>
+                <!-- <span class="simple-nav__logo-text">{title}</span> -->
             </a>
 
             <ul
