--- a/src/components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro
+++ b/src/components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro
@@ -12,7 +12,7 @@ import InfoCard from "@components/Cards/Info/InfoCard.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
 
-console.log(props.images)
+// console.log(props.images)
 // const info = data.core_values.split(",").map((value) => ({ icon_name: "mdi-check", content: value }))
 // console.log(info);
 ---
