--- a/src/components/Sections/Stats/WhyChooseUsGrid/WhyChooseUsGrid.astro
+++ b/src/components/Sections/Stats/WhyChooseUsGrid/WhyChooseUsGrid.astro
@@ -17,7 +17,7 @@ const cardStyles = [
     { bg: 'var(--clr-secondary-darker)' },
 ];
 
-console.log(props)
+// console.log(props)
 ---
 
 <div class="content_section" data-offscreen>
