--- a/src/components/Hero/Overflow/hero.css
+++ b/src/components/Hero/Overflow/hero.css
@@ -7,22 +7,26 @@
 }
 
 .overflow_hero__content h1 {
-    color: var(--clr-primary);
+    color: var(--clr-primary-lighter);
     font-size: var(--heading-4xl);
-    max-width: 50ch;
+    max-width: 25ch;
 }
 
 .overflow_hero__content {
     color: var(--clr-neutral-50);
 }
+
 .overflow_hero__overlay {
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
     grid-row: 1 / -1;
     z-index: 2;
 
     width: 100%;
     height: 100%;
-    background: oklch(from var(--clr-primary) l c h / 0.25);
+    /* background: oklch(from var(--clr-primary-darker) l c h / 0.65); */
+    background:
+        radial-gradient(ellipse at 80% 0%, transparent, transparent),
+        radial-gradient(ellipse at 0% 80%, oklch(from var(--clr-primary-darker) l c h), transparent);
 }
 
 img#overflow_hero__image.overflow_hero__image {
@@ -43,7 +47,7 @@ img#overflow_hero__image.overflow_hero__image {
     grid-column: 1 / -1;
     grid-row: -4 / -1;
 
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
 
     align-items: center;
@@ -53,6 +57,5 @@ img#overflow_hero__image.overflow_hero__image {
 .overflow_hero__content {
     max-width: 65ch;
 }
-@media (min-width: 768px) {
 
-}
+@media (min-width: 768px) {}
