--- a/src/components/Hero/VerticalWithImage/VerticalWithImage.astro
+++ b/src/components/Hero/VerticalWithImage/VerticalWithImage.astro
@@ -24,7 +24,7 @@ const props = Astro.props;
             </div>
         </article>
 
-        <div class="vertical_hero__image_wrapper full-width">
+        <div class="vertical_hero__image_wrapper breakout">
             <CustomImage
                 classlist="vertical_hero__image"
                 eager={true}
