--- a/src/components/Hero/VerticalWithImage/hero.css
+++ b/src/components/Hero/VerticalWithImage/hero.css
@@ -15,7 +15,7 @@
 }
 
 .vertical_hero__content {
-    padding-block: var(--size-8);
+    margin-block: var(--size-8);
 
     display: flex;
     /* flex-direction: column; */
@@ -36,10 +36,27 @@
 }
 
 .vertical_hero__image_wrapper {
+    position: relative;
+    isolation: isolate;
+    z-index: 1;
+
     height: 100%;
     width: 100%;
-    max-height: 600px;
-    margin-top: var(--size-8);
+    max-height: 300px;
+    /* margin-top: var(--size-8); */
+    margin-bottom: var(--size-8);
+}
+
+.vertical_hero__image_wrapper::before {
+    content: "";
+    position: absolute;
+    top: -5%;
+    left: 1.25%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--clr-primary);
+    opacity: 0.5;
+    z-index: -1;
 }
 
 .vertical_hero__image {
@@ -81,7 +98,7 @@
         align-items: center
     }
     .vertical_hero__wrapper {
-        --row-height: 400px;
+        --row-height: 100px;
     }
 
     .vertical_hero__content>* {
