--- a/src/components/Sections/Stats/WhyChooseUsInteractive/style.css
+++ b/src/components/Sections/Stats/WhyChooseUsInteractive/style.css
@@ -1,55 +1,45 @@
-.two_column_stat__header {
+.page-section__header {
     margin-bottom: var(--size-8);
 }
-
-.two_column_stat__header p {
-    max-width: 50ch;
-}
-
-.two_column_stat__wrapper {
+.interactive__wrapper {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     gap: var(--size-4);
 }
 
-.two_column_stat__content_title {
+.interactive__image_container {
+    position: relative;
+    isolation: isolate;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.interactive__image_wrapper[data-visible="true"] {
+    display: block;
+    position: absolute;
+    inset: 0 0 auto;
+    width: 100%;
+    height: 100%;
+}
+
+.interactive__image_wrapper[data-visible="false"] {
+    display: none;
+}
+
+.interactive__content {
+    padding: var(--size-4) 0;
+    border-top: 2px solid var(--clr-secondary-darker);
+    cursor: pointer;
+}
+
+.interactive__content_container h3 {
     color: var(--clr-secondary-dark);
 }
 
-.two_column_stat__content_icon {
-    width: max-content;
-}
-
-.two_column_stat__content {
-    padding: var(--size-4) 0;
-
-    border-top: 2px solid var(--clr-secondary-darker);
-}
-.two_column_stat__content>* {
-    height: fit-content;
-    margin: 0;
-    padding: 0;
-}
-
-.two_column_stat__image_wrapper>img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* max-height: 300px; */
-}
-.two_column_stat__image_wrapper {
-    max-width: 500px;
-    height: 100%;
-}
-
-.two_column_stat__description ul {
-    list-style-type: circle;
-    margin-left: var(--size-4);
-    margin-block: var(--size-2);
-}
 @media (min-width: 768px) {
-    .two_column_stat__wrapper {
+    .interactive__wrapper {
         display: grid;
         grid-template-columns: 45% 1fr;
         grid-template-rows: auto;
@@ -57,7 +47,7 @@
         gap: var(--size-4);
     }
 
-    .two_column_stat__image_wrapper {
+    .interactive__image_wrapper {
         grid-row: 1/-1;
         display: flex;
         flex-direction: column;
@@ -68,7 +58,7 @@
         max-height: 700px;
     }
 
-    .two_column_stat__content_wrapper {
+    .interactive__content_container {
         display: grid;
         grid-template-rows: repeat(auto-fit, minmax(max-content, 1fr));
         align-items: start;
@@ -76,7 +66,7 @@
         gap: var(--size-2);
     }
 
-    .two_column_stat__content {
+    .interactive__content {
         display: grid;
         /* grid-template-columns: repeat(2, 1fr); */
         grid-template-rows: 1fr;
