style: Update FloatingFooter component styles; add page-section class and adjust padding

--- a/src/components/Footer/FloatingFooter/FloatingFooter.astro
+++ b/src/components/Footer/FloatingFooter/FloatingFooter.astro
@@ -17,7 +17,7 @@ const copyright = translateFooterItem('copyright', country);
 const designedByText = translateFooterItem('designed_by', country);
 ---
 
-<footer class="floating_footer">
+<footer class="floating_footer page-section">
     <Container>
         <div class="breakout floating_footer__content">
             <p>
